@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.13.2
+VERSION=1.13.3
 
-DEPENDENCY="zeda=1.7.2;zm=1.7.1"
+DEPENDENCY="zeda=1.7.3;zm=1.7.2"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
