@@ -19,7 +19,7 @@ __BEGIN_DECLS
  * |~ m[0]  m[2] ~| = |~ e[0][0]  e[1][0] ~| = |~ ll  al ~|
  * |_ m[1]  m[3] _|   |_ e[0][1]  e[1][1] _|   |_ la  aa _|
  */
-ZDEF_UNION( zMat6D ){
+ZDEF_UNION( __ZEO_CLASS_EXPORT, zMat6D ){
   zMat3D m[4];    /*!< \brief four 3x3 matrices */
   zMat3D e[2][2]; /*!< \brief 2x2 3x3 matrices */
   struct{
